--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://postgres:admin123@localhost:5432/explora_db
+DATABASE_URL=postgres://postgres:0107@localhost:5826/explora_db
 JWT_SECRET=minha_senha_super_segura
 PORT=3000
 CORS_ORIGIN=http://127.0.0.1:5501
